--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation libs.retrofit.scalars
     implementation libs.okhttp
     implementation libs.androidx.core.ktx
+    implementation libs.androidx.constraintlayout
     implementation libs.androidx.leanback
+    implementation libs.androidx.recyclerview
     implementation libs.glide
 }
