--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     implementation libs.retrofit
     implementation libs.retrofit.scalars
     implementation libs.okhttp
+    implementation libs.room.runtime
+    implementation libs.room.ktx
+    ksp libs.room.compiler
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
