Add connectivity monitoring and offline state UI
  - Wire ConnectivityManager with NetworkCallback
  - Expose online/offline state
  - Show a global offline banner/overlay

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ constraintlayout = "2.2.1"
 leanback = "1.2.0"
 glide = "5.0.5"
 recyclerview = "1.4.0"
+lifecycle = "2.8.7"
 
 [libraries]
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
@@ -38,6 +39,8 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 androidx-leanback = { group = "androidx.leanback", name = "leanback", version.ref = "leanback" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
+androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 
 [plugins]
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
