--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -42,5 +42,7 @@ dependencies {
     implementation libs.androidx.constraintlayout
     implementation libs.androidx.leanback
     implementation libs.androidx.recyclerview
+    implementation libs.androidx.lifecycle.runtime
+    implementation libs.androidx.lifecycle.viewmodel
     implementation libs.glide
 }
